<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#E3F2FD">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:singleLine="false" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotifyButton"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#FF9800"
        android:onClick="spotifyStreamer"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scoreButton"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/spotifyButton"
        android:layout_centerHorizontal="true"
        android:background="#FF9800"
        android:onClick="scoresApp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/libraryButton"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/scoreButton"
        android:layout_centerHorizontal="true"
        android:background="#FF9800"
        android:onClick="libraryApp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/buildButton"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/libraryButton"
        android:layout_centerHorizontal="true"
        android:background="#FF9800"
        android:onClick="buildItBigger"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/XYZ_reader"
        android:id="@+id/XYZReaderButton"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/buildButton"
        android:layout_centerHorizontal="true"
        android:background="#FF9800"
        android:onClick="XYZReader"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/capstoneButton"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/XYZReaderButton"
        android:layout_centerHorizontal="true"
        android:background="#BF360C"
        android:onClick="capstoneMyOwnApp"/>


</RelativeLayout>
